# cpu-typing

./: CMakeLists.txt  _macro.h  test.c
include/: x64_IA32e64.h
include/x86_64/IA32e-64/: descriptor.h  interrupt_frame.h  paging.h  register.h  segment.h
